FIX: hero title colors and alignment fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,28 +33,3 @@
 	transition: .1s;
 	
 }
-/* .hero-title:nth-of-type(6):hover{
-	width: 20px;
-	color: red;
-	transition: .1s;
-}
-.hero-title:nth-of-type(7):hover{
-	width: 20px;
-	color: yellow;
-	transition: .1s;
-}
-.hero-title:nth-of-type(8):hover{
-	width: 20px;
-	color: purple;
-	transition: .1s;
-}
-.hero-title:nth-of-type(9):hover{
-	width: 20px;
-	color: blue;
-	transition: .1s;
-}
-.hero-title:nth-of-type(10):hover{
-	width: 20px;
-	color: red;
-	transition: .1s;
-} */
